import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

generate_static_abc("simp_counter_ets_abc") {
  base_url = "./"
  files = [ "./simpCounter.ets" ]

  is_boot_abc = "True"
  device_dst_file = "/system/framework/simp_counter_ets_abc.abc"
}

ohos_prebuilt_etc("simp_counter_ets_abc_etc") {
  source = "$target_out_dir/simp_counter_ets_abc.abc"
  module_install_dir = "framework"
  subsystem_name = "arkui"
  part_name = "ace_engine"
  deps = [ ":simp_counter_ets_abc" ]
}

group("simpCounter"){
    deps = [":simp_counter_ets_abc_etc"]
}