# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# import("//foundation/arkui/ace_engine/ace_config.gni")
# import("//build/templates/abc/ohos_abc.gni")

# ohos_abc("imageGeneratorDialog") {
#   sources = [ "imageGeneratorDialog.js" ]
#   output_name = "imageGeneratorDialog"
#   install_images = [ "system" ]
#   module_install_dir = "etc/abc/arkui"
#   subsystem_name = ace_engine_subsystem
#   part_name = ace_engine_part
# }

import("//build/config/components/ets_frontend/es2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//foundation/arkui/ace_engine/build/ace_gen_obj.gni")

es2abc_gen_abc("gen_imageGeneratorDialog_abc") {
  src_js = rebase_path("imageGeneratorDialog.js")
  dst_file = rebase_path(target_out_dir + "/imageGeneratorDialog.abc")
  in_puts = [ "imageGeneratorDialog.js" ]
  out_puts = [ target_out_dir + "/imageGeneratorDialog.abc" ]
  extra_args = [ "--module" ]
}

gen_obj("imageGeneratorDialog_abc") {
  input = get_label_info(":gen_imageGeneratorDialog_abc", "target_out_dir") +
          "/imageGeneratorDialog.abc"
  if (use_mac || use_mingw_win || use_linux || target_os == "ios") {
    output = target_out_dir + "/imageGeneratorDialog_abc.c"
  } else {
    output = target_out_dir + "/imageGeneratorDialog_abc.o"
  }
  snapshot_dep = [ ":gen_imageGeneratorDialog_abc" ]
}

source_set("imageGeneratorDialog") {
  deps = [ ":gen_obj_src_imageGeneratorDialog_abc" ]
}